--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,12 +34,28 @@ services:
       - .env
     environment:
       DATABASE_URL: ${DATABASE_URL:-postgresql://seattlebasketball:${POSTGRES_PASSWORD:-change_me}@db:5432/seattlebasketball?schema=public}
-    ports:
-      - "3000:3000"
     depends_on:
       migrate:
         condition: service_completed_successfully
     restart: unless-stopped
 
+  caddy:
+    image: caddy:2-alpine
+    depends_on:
+      - app
+    ports:
+      - "80:80"
+      - "443:443"
+    environment:
+      CADDY_DOMAIN: ${CADDY_DOMAIN:-localhost}
+      CADDY_EMAIL: ${CADDY_EMAIL:-}
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+    restart: unless-stopped
+
 volumes:
   db_data:
+  caddy_data:
+  caddy_config:
